# ChillPatcher

./: .gitignore  ChillPatcher.csproj  ChillPatcher.sln  CoreDependencyLoader.cs  LICENSE  MyPluginInfo.cs  OneJSBridge.cs  PlayerLoopInjector.cs  Plugin.cs  PluginConfig.cs  README.md  README_ZH.md  UIInstance.cs  UIInstanceConfig.cs  UIToolkitEventBlocker.cs  UIToolkitInputDispatcher.cs  build_release.bat  deploy_ui.bat  nuget.config  readme_jp.md
ChillPatcher.Module.Bilibili/: BilibiliModule.cs  ChillPatcher.Module.Bilibili.csproj
ChillPatcher.Module.LocalFolder/: ChillPatcher.Module.LocalFolder.csproj  LocalFolderModule.cs
ChillPatcher.Module.LocalIntegration/: AIChatConversationHandler.cs  AIChatSpeakHandler.cs  AIChatSpeakerAdapter.cs  AudioControlHandler.cs  ChillPatcher.Module.LocalIntegration.csproj  EnvironmentControlHandler.cs  ILocalIntegrationHandler.cs  JsonBody.cs  LocalIntegrationBus.cs  LocalIntegrationModule.cs  LocalIntegrationRunner.cs  ModuleInfo.cs  PomodoroControlHandler.cs  README.md
ChillPatcher.Module.Netease/: ChillPatcher.Module.Netease.csproj  NeteaseBridge.cs  NeteaseFileCache.cs  NeteaseModule.cs  NeteasePcmStreamReader.cs  NeteaseSongRegistry.cs
ChillPatcher.Module.QQMusic/: ChillPatcher.Module.QQMusic.csproj  QQMusicBridge.cs  QQMusicModule.cs
ChillPatcher.Module.Spotify/: SpotifyModule.cs
ChillPatcher.OneJS/: ChillPatcher.OneJS.csproj
Integration/: AIChatBridge.cs  (+8 more)
NativePlugins/AudioDecoder/: CMakeLists.txt  build.bat
NativePlugins/AudioDecoder/include/: audio_decoder.h
NativePlugins/AudioDecoder/src/: audio_decoder.cpp
(+180 files in other folders)
